:bug: Fixed long strings overflow in task description.

--- a/src/styles/Task.css
+++ b/src/styles/Task.css
@@ -8,3 +8,7 @@
     transition: 0.5s;
 
 }
+.task span{
+    width:100%;
+    word-wrap: break-word;
+}
